Update how checkboxes get event listener, fix svg alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,4 +40,9 @@ body {
     border-bottom: 1px solid #303030;
     padding: 8px 0;
 }
+
+svg {
+    vertical-align: top;
+    padding: 2px;
+}
 /* @media (min-width) */
